Eliminar soporte para autenticación PDV con PIN: `AuthPdvController`, `AuthPdvService`, y entidades relacionadas. Normalizar entidad `Orden` para permitir `mesero` opcional. Agregar nuevo flujo de registro de dispositivos PDV en `PdvRegistroController` y `PdvRegistroService`.